# eleva-project

./: .gitignore  Dockerfile  Dockerfile.test  DockerfileTest  Makefile  README.md  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/dependancies/: __init__.py  validate_authorization.py
app/api/v1/dependencies/: __init__.py  locale.py  query_dep.py
app/api/v1/serializers/: authorization.py  base.py  candidates.py  users.py
app/api/v1/services/: authorization.py  candidates.py  users.py
app/api/v1/views/: __init__.py  authorization.py  candidates.py  health_check.py  users.py
app/core/: settings.py
app/core/constants/: __init__.py  group.py  responses.py  search.py
app/core/database/: __init__.py  base.py
app/core/enums/: __init__.py  gender.py  group.py  order.py  token.py
app/core/exceptions/: __init__.py  authorization.py  candidates.py  users.py
app/core/extra_types/: __init__.py  _pydantic.py
app/core/helpers/: __init__.py  enum_value_validator.py  hash.py  jwt.py
app/core/utils/: __init__.py  custom_logger.py  generate_csv.py  response_handler.py
app/middleware/: __init__.py  exception_handler.py
app/models/: __init__.py  candidate.py  common.py  users.py
tests/: conftest.py
tests/v1/: test_candidates.py  test_health.py  test_users.py
