[tool.poetry]
name = "eleva-project"
version = "0.1.0"
description = "Technical Assignment Elevatus Company"
authors = ["Yousef Aldabbas <yousefaldabbas0@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.3"
cloudinary = "^1.37.0"
asgi-correlation-id = "^4.3.0"
ddtrace = "^2.4.0"
structlog = "^23.3.0"
pandas = "^2.2.2"
pydantic-settings = "^2.3.4"
asgi-lifespan = "^2.1.0"
httpx = "^0.27.0"
anyio = "^4.2.0"
beanie = "^1.26.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^7.4.4"
black = "^23.12.1"
pytest-asyncio = "^0.23.3"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
